--- a/MyNotes/Views/Note/Add.cshtml
+++ b/MyNotes/Views/Note/Add.cshtml
@@ -1,7 +1,8 @@
 ﻿@using (Html.BeginForm("Save", "Note", FormMethod.Post))
 {
     <p>@Html.Label("Text", "Введите тест заметки")</p>
-    @Html.TextArea("Text", "", new { required = "required"}) <br/>
+    @Html.TextArea("Text", "", new { required = "required" })
+    <br />
 
     <input type="submit" value="Сохранить" />
 }
