--- a/Frontend/src/app/notelist/app.notelist.html
+++ b/Frontend/src/app/notelist/app.notelist.html
@@ -1,4 +1,4 @@
-<div style="height: 60px;">
+<div>
     <button class="btn btn-success createButton" (click)="createNote()">New Note</button>
 </div>
 <div class="notelistContainer col-md-6 offset-md-3">
