--- a/Frontend/src/app/notelist/app.notelist.css
+++ b/Frontend/src/app/notelist/app.notelist.css
@@ -1,128 +1,162 @@
-.btn {
-    height: 100%;
-    width: 100px;
-    float: left;
-    border: 0;
-    border-radius: 0px;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    font-family: Roboto; 
-    font-size: 20px;
-}
-
-    .btn.selected {
-        margin: 5px;
-        border: 3px solid darkslategrey;
-    }
-
-    .btn:hover {
-        box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.8);
-        transition: 0.3s;
-    }
-
-.createButton {
-    height: 60px;
-    font-size: 17px;
-    background-color: deepskyblue;
-}
-
-.saveButton {
-    background-color: lawngreen;
-    display: none;
-}
-
-    .saveButton.selected {
-        display: inline-block;
-    }
-
-.cancelButton {
-    background-color: orange;
-    display: none;
-}
-
-    .cancelButton.selected {
-        display: inline-block;
-    }
-
-.deleteButton {
-    background-color: red;
-}
-
-    .deleteButton.selected {
-        background-color: red;
-    }
 
 .notelistContainer {
-    margin-top: 50px;
 }
 
 .noteContainer {
-    display: flex;
-    overflow: hidden;
-    padding: 0px;
-    border: 0 solid #007BFF;
-    border-width: 0 4px 4px 4px;
-    max-height: 56px;
-    transition: max-height 0.5s;
+    background-color: #F0F0F0;
+    border: 3px solid #007BFF;
 }
-    .noteContainer:first-child {
-        border-top: 4px solid #007BFF;
-    }
 
     .noteContainer.selected {
-        display: block;
-        border: 0 solid darkblue;
-        border-width: 6px 104px 6px 6px;
+        border-color: darkblue;
         background-color: #F4F7F9;
-        max-height: 400px;
-        transition: max-height 0.5s;
     }
 
-.body:hover:not(.selected) {
+
+.textBlock {
+    transition: width 3s;
+}
+
+.textBlockInherit {
+    transition: width 3s;
+    border: 0;
+    resize: none;
+    outline: none;
+    display: inline-block;
+    overflow: hidden;
+    transition: height 0.7s;
+    height: 50px;
+}
+
+    .textBlockInherit.selected {
+        transition: height 1s;
+        overflow: auto;
+        height: 160px;
+        width: 100%;
+        background-color: #F4F7F9;
+    }
+
+.clickable:hover:not(.selected) {
     background-color: #F4F7F9;
-    transition: 0.3s;
     cursor: pointer;
 }
 
-.body {
-    display: flex;
+.dateBlock {
+    width: 160px;
+    border: 3px solid #007BFF;
+    padding-top: 25px;
+}
+
+    .dateBlock.selected {
+        border-color: darkblue;
+        display: none;
+    }
+
+.buttonBlock {
     position: relative;
-    width: 100%;
+    width: 100px;
+    height: 56px;
+    padding: 3px;
 }
 
-    .body.selected {
-        display: block;
-    }
 
 
-.noteText {
-    padding: 1px 0 0 10px;
-    width: 100%;
-    overflow: hidden;
-    resize: none;
-    border: 0;
-    height: 250px;
+.btn {
+    height: 50px;
+    width: 100px;
+    font-size: 20px;
+    margin: 0 12px 5px 12px;
 }
 
-    .noteText.selected {
-        background-color: #F4F7F9;
-        padding: 10px;
-        border-bottom: 6px solid darkblue;
-    }
-
-
-.noteDate {
-    width: 140px;
-    padding-top: 6px;
-    float: right;
-    border-width: 0;
-    cursor: default;
-}
-
-    .noteDate.selected {
-        margin-top: 10px;
-        background-color: #F4F7F9;
+    .btn:hover {
+        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8);
         transition: 0.3s;
-        cursor: pointer;
+    }
+
+.createButtonBlock {
+    display: flex;
+}
+
+.createButton {
+    margin: 15px;
+    height: 60px;
+    font-size: 20px;
+    background-color: deepskyblue;
+    min-width: 150px;
+}
+
+.line {
+    height: 8px;
+    border-radius: 19px;
+    background-color: deepskyblue;
+    margin-top: 42px;
+    width: 100px;
+}
+
+    .line.left {
+        width: 100px;
+    }
+    .line.right {
+        width: 500px;
+    }
+
+.saveButton {
+    transition: 0,5s;
+    opacity: 0;
+    top: 0;
+    position: absolute;
+}
+
+    .saveButton.selected {
+        opacity: 100;
+        transition: 0,5s;
+        position: static;
+    }
+
+.cancelButton {
+    transition: 1s;
+    opacity: 0;
+    position: absolute;
+    left: 3px;
+}
+
+    .cancelButton.selected {
+        opacity: 100;
+        transform: translate(0, 56px);
+        -webkit-transform: translate(0,56px);
+        -o-transform: translate(0,56px);
+        -moz-transform: translate(0,56ppx);
+        transition: 1s;
+    }
+
+.deleteButton {
+    transition: 1s;
+}
+
+    .deleteButton.selected {
+        transform: translate(0,115px);
+        -webkit-transform: translate(0,115px);
+        -o-transform: translate(0,115px);
+        -moz-transform: translate(0,115ppx);
+        transition: 1s;
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 1s;
     }
 
 
+.date {
+    position: absolute;
+    left: 3px;
+    top: 54px;
+    transition: 0.9s;
+}
+
+    .date.selected {
+        transform: translate(0, 110px);
+        -webkit-transform: translate(0, 110px);
+        -o-transform: translate(0, 110px);
+        -moz-transform: translate(0, 110px);
+        transition: 1s;
+    }
