--- a/Frontend/src/app/notelist/app.notelist.html
+++ b/Frontend/src/app/notelist/app.notelist.html
@@ -1,9 +1,11 @@
-<div>
-    <button class="btn btn-success createButton" (click)="createNote()">New Note</button>
+<div class="col-md-6 offset-md-3 createButtonBlock left">
+    <div class="line"></div>
+    <button class="btn btn-primary createButton" (click)="createNote()">New Note</button>
+    <div class="line right"></div>
 </div>
-<div class="notelistContainer col-md-6 offset-md-3">
+<div class="notelistContainer col-md-6 offset-md-3" hidden>
     <div class="noteContainer" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
-        <div class="body" [class.selected]="note.Selected" (click)="selectNote(note)">
+        <div class="noteBody" [class.selected]="note.Selected" (click)="selectNote(note)">
             <textarea class="noteText" [class.selected]="note.Selected" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
             <input class="noteDate" [class.selected]="note.Selected" type="text" [(ngModel)]="note.Date" disabled>
         </div>
@@ -15,18 +17,22 @@
     </div>
 </div>
 
-<!--<table class="table table-bordered col-md-6 offset-md-3">
+
+<table class="table table-bordered notelistContainer col-md-6 offset-md-3">
     <tbody>
-        <tr [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
-            <td contenteditable="true" [disabled]="!note.Selected">{{note.Text}}</td>
-            <td disabled>{{note.Date}}</td>
-            <td><button [class.selected]="note.Selected" class="btn btn-success saveButton" (click)="update(note, index)">Save</button></td>
-            <td><button [class.selected]="note.Selected" class="btn btn-success cancelButton" (click)="unselectNote(note, index)">Cancel</button></td>
-            <td><button [class.selected]="note.Selected" class="btn btn-success deleteButton" (click)="del(note, index)">Delete</button></td>
+        <tr class="noteContainer clickable" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
+            <td class="textBlock clickable" [class.selected]="note.Selected" (click)="selectNote(note)">
+                <textarea class="textBlockInherit" [class.selected]="note.Selected" contenteditable="true" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
+            </td>
+            <td class="buttonBlock">
+                <button class="btn btn-success saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Save <br /></button>
+                <button class="btn btn-warning cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Cancel <br /></button>
+                <button class="btn btn-danger deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Delete</button>
+                <spam class="date" [class.selected]="note.Selected">{{note.Date}}</spam>
+            </td>
         </tr>
     </tbody>
-</table>-->
+</table>
 
 
 
-    
