--- a/Frontend/src/app/main/app.main.html
+++ b/Frontend/src/app/main/app.main.html
@@ -7,5 +7,7 @@
               *ngIf="userAuthenticated"
               (onChangedUserName)="onChangedUserName($event)">
     </notelist>
+
+    <welcome *ngIf="!userAuthenticated"> </welcome>
 </div>  
 
