--- a/Frontend/src/app/authorization/app.authorization.css
+++ b/Frontend/src/app/authorization/app.authorization.css
@@ -1,82 +1,181 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+.hiden {
+    display: none;
+}
+
+.authorization {
+    background-color: #E5E5E5;
+}
+
 input.ng-touched.ng-invalid {
     border: 2px solid red;
 }
 
 
-
-.nav {
-    height: 50px;
-    background-color: #007BFF;
-    color: #FFFFFF;
-    display: flex;
-    position: relative;
-    font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-}
-
 .authPanel {
     position: absolute;
-    height: 50px;
-    right: 10px;
+    right: 33px;
+    top: 23px;
+    display: flex;
+}
+
+
+.appName {
+    position: absolute;
+    left: 33px;
+    top: 23px;
+    font-family: 'Caveat', cursive;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 45px;
+    color: #2F7DF6;
+}
+
+.userNameBlock {
+    padding: 10px 20px 0 20px;
+    height: 40px;
+    background: #FFFFFF;
+    border-radius: 20px;
+
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #2F7DF6;
+}
+
+.userNameIcon {
+    margin-right: 10px;
 }
 
 .authPanelButton {
-    border: none;
+    margin-left: 10px;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.04em;
+    background-color: #E5E5E5;
+    border: 5px solid #E5E5E5;
     outline: none;
-    height: 50px;
-    width: 100px;
-    background-color: #007BFF;
-    color: #FFFFFF;
+    height: 40px;
+    color: #2F7DF6;
+    z-index: 1;
 }
-    .authPanelButton:hover {
-        border: 2px solid white;
-        border-top: 0;
-        border-bottom: 0;
+    .authPanelButton:hover { /* Rectangle 2 */
+        background: #2F7DF6;
+        border: 5px solid #2F7DF6;
+        border-radius: 20px;
+        color: #FFFFFF;
     }
 
-form {
-    position: relative;
+.logoutIcon {
+    margin-top: -5px;
+    margin-left: 5px;
 }
 
 .formContainer {
-    padding-top: 10px;
     position: absolute;
-    right: 0px;
-    width: 400px;
-    background-color: deepskyblue;
-    border: 8px solid #007BFF;
-    border-top: 0;
-    color: #FFFFFF;
-    padding-bottom: 5px;
+    right: 24px;
+    top: 82px;
+    width: 312px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 15px rgba(9, 59, 137, 0.1);
+    border-radius: 20px;
+    padding: 24px;
+}
+
+@media screen and (max-width: 1200px) {
+    .formContainer {
+        /*position: initial;*/
+        margin-top: 0px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .formContainer {
+        width: auto;
+    }
+}
+
+.formHeader {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    color: #2F7DF6;
+    margin: 0;
 }
 
 .inputBlock {
-    display: flex;
+    position: relative;
     margin-bottom: 10px;
 }
 
 input {
-    width: 250px;
-    margin: 0;
+    width: 264px;
+    height: 40px;
+    background: #FFFFFF;
+    border: 1px solid #C1C1C1;
+    border-radius: 20px;
+    padding-right:50px;
+
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.04em;
 }
 
-.requiredSimbol {
-    color: red;
-    font-size: 25px;
-}
-
-
-.ValidationErrorBlock {
-    color: red;
-    background-color: white;
-    border: 6px solid #007BFF;
-}
-
-ul {
-    padding-left: 30px;
+.inputIcon {
+    position: absolute;
+    right: 20px;
+    top: 12px;
 }
 
 .formButton {
-    margin-bottom: 10px;
+    width: 264px;
+    height: 40px;
+    left: 24px;
+    top: 224px;
+    background: #2F7DF6;
+    border-radius: 20px;
+    margin-bottom: 5px;
+
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
+
+.validationErrorText {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    color: #FF5F76;
+}
+
+.icon {
+    position: absolute;
+    display: block;
+    top: 333px;
+    left: 50%;
+    margin: 0 0 0 -200px;
+    width: 400px;
+    height: 359px;
 }
 
