--- a/Frontend/src/app/notelist/app.notelist.html
+++ b/Frontend/src/app/notelist/app.notelist.html
@@ -1,38 +1,58 @@
-<div class="col-md-6 offset-md-3 createButtonBlock left">
-    <div class="line"></div>
-    <button class="btn btn-primary createButton" (click)="createNote()">New Note</button>
-    <div class="line right"></div>
-</div>
-<div class="notelistContainer col-md-6 offset-md-3" hidden>
-    <div class="noteContainer" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
-        <div class="noteBody" [class.selected]="note.Selected" (click)="selectNote(note)">
-            <textarea class="noteText" [class.selected]="note.Selected" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
-            <input class="noteDate" [class.selected]="note.Selected" type="text" [(ngModel)]="note.Date" disabled>
+<div class="notelist">
+    <div class="col-md-8 offset-md-2 tableTitle">
+        <span class="notes">Notes</span>
+        <div class="lineBlock">
+            <svg class="point" width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="5" cy="5" r="5" fill="#2F7DF6" />
+            </svg>
+            <img src="/assets/line.svg" class="line">
         </div>
+        <div class="createButtonBlock">
+            <button class="btn btn-primary createButton" (click)="createNote()">New Note</button>
+            <img class="createButtonIcon" src="/assets/buttonIcon.svg">
+        </div>
+    </div>
+
+    <!--<table class="table table-bordered notelistContainer col-md-8 offset-md-2">
+        <tbody>
+            <tr class="noteContainer clickable" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
+                <td class="textBlock clickable" [class.selected]="note.Selected" (click)="selectNote(note)">
+                    <textarea class="textBlockInherit" [class.selected]="note.Selected" contenteditable="true" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
+                </td>
+                <td class="buttonBlock">
+                    <button class="btn btn-success saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Save <br /></button>
+                    <button class="btn btn-warning cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Cancel <br /></button>
+                    <button class="btn btn-danger deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Delete</button>
+                    <spam class="date" [class.selected]="note.Selected">{{note.Date}}</spam>
+                </td>
+            </tr>
+        </tbody>
+    </table>-->
+
+<div class="notelistContainer col-md-8 offset-md-2">
+    <!--clickable--> <div class="noteContainer" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
+        <div class="date" [class.selected]="note.Selected">{{note.Date}}</div>
+        <textarea class="textBlockInherit" [class.selected]="note.Selected" contenteditable="true" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
         <div class="buttonBlock">
-            <button [class.selected]="note.Selected" class="btn btn-success saveButton" (click)="update(note, index)">Save</button>
-            <button [class.selected]="note.Selected" class="btn btn-success cancelButton" (click)="unselectNote(note, index)">Cancel</button>
-            <button [class.selected]="note.Selected" class="btn btn-success deleteButton" (click)="del(note, index)">Delete</button>
+            <div class="saveAndCancelButtons">
+                <button class="btn btn-primary saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Save <br /></button>
+                <button class="btn btn-primary cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Cancel <br /></button>
+            </div>
+
+            <div class="deleteButtonBlock">
+                <button class="btn btn-primary deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Delete Note</button>
+                <svg class="deleteButtonIcon" width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11 6V16H3V6H11ZM9.5 0H4.5L3.5 1H0V3H14V1H10.5L9.5 0ZM13 4H1V16C1 17.1 1.9 18 3 18H11C12.1 18 13 17.1 13 16V4Z" fill="#2F7DF6" />
+                </svg>
+            </div>
         </div>
     </div>
 </div>
 
-
-<table class="table table-bordered notelistContainer col-md-6 offset-md-3">
-    <tbody>
-        <tr class="noteContainer clickable" [class.selected]="note.Selected" *ngFor="let note of notelist; index as index;">
-            <td class="textBlock clickable" [class.selected]="note.Selected" (click)="selectNote(note)">
-                <textarea class="textBlockInherit" [class.selected]="note.Selected" contenteditable="true" [(ngModel)]="note.Text" [disabled]="!note.Selected"></textarea>
-            </td>
-            <td class="buttonBlock">
-                <button class="btn btn-success saveButton" [class.selected]="note.Selected" (click)="update(note, index)">Save <br /></button>
-                <button class="btn btn-warning cancelButton" [class.selected]="note.Selected" (click)="unselectNote(note, index)">Cancel <br /></button>
-                <button class="btn btn-danger deleteButton" [class.selected]="note.Selected" (click)="del(note, index)">Delete</button>
-                <spam class="date" [class.selected]="note.Selected">{{note.Date}}</spam>
-            </td>
-        </tr>
-    </tbody>
-</table>
-
+    <div *ngIf="!notelist.length" class="iconBlock">
+        <img src="/assets/noRecords.svg" class="icon" alt="You have no records."> <br />
+        <span class="iconText">You have no records</span>
+    </div>
+</div>
 
 
